--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -10,10 +10,17 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Optional: Proxy backend requests if configured (not needed here since frontend makes direct calls)
-    # location /api/ {
-    #     proxy_pass http://backend:8080/;
-    # }
+    # Proxy API requests to backend
+    location /api/ {
+        # Strip /api prefix when forwarding to backend
+        rewrite ^/api/(.*) /$1 break;
+        proxy_pass http://backend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
 
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
