--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       - ./Frontend:/app
       - /app/node_modules
     command: npm run dev -- --host
+    environment:
+      - BACKEND_URL=http://backend:8080
     depends_on:
       - backend
     restart: unless-stopped
